  * Add upstream Rev. 2989:
    - Changed UPGRADE,
      www/agc/manager_send.php,
      www/agc/vdc_db_query.php,
      www/agc/vicidial.php: Added more agent debug output for recordings.
  * Add upstream Rev. 2990:
    - New extras/vdc_hipchat.php.
  * Add upstream Rev. 2991:
    - New bin/AST_lead_select_export.pl.
  * Add upstream Rev. 2992:
    - Changed www/vicidial/help_documentation.txt.

2.25.25b
  [Jörg Frings-Fürst]
  * www/vicidial/help.php: Correct anchor.
  * www/vicidial/admin.php: Correct typo.
  * Release 2.25.25b 2018-03-09.

2.25.25a
  [Jörg Frings-Fürst]
  * changelog: Correct some typos.
  * bin/ADMIN_backup.pl: Add LOCALpath if requested.
  * Add Index UserTime to recordings-log and _archive (2018-006):
  	- New DB-Schema 1532:
      + New extras/mysql_update/mysql-1532.sql.
      + Changed extras/upgrade_2.14.sql,
        extras/MySQL_AST_CREATE_tables.sql.
  * Release 2.25.25a 2018-03-09.

2.25.25
  [Frank Gorgas-Waller]
  * Add Agent Prefix (2018-004):
    - extras/mysql_update/mysql-1531.sql,
      www/agc/vicidial.php,
      extras/upgrade_2.14.sql,
      www/vicidial/help.php,
      www/vicidial/admin.php: Add Agent Prefix for calls to Agents with 
        AgentNo != PhoneNo.

  [Jörg Frings-Fürst]
  * www/vicidial/admin.php: Switch from SVN-Version to Git-commit.
  * www/vicidial/AST_stat_callbacks.php: Add lists fields (2018-002).
  * Add add pickup_delay in ingroups (2018-003):
    - extras/MySQL_AST_CREATE_tables.sql,
      extras/upgrade_2.14.sql,
      www/vicidial/admin.php,
      www/vicidial/help.php,
      readme.fp,
      extras/mysql_update/mysql-1531.sql.
  * Add upstream Rev. 2924-2925:
    - www/vicidial/admin_email_accounts.php,
    - www/vicidial/AST_source_vlc_status_report.php: Fixed translation
        issue #1069.
  * Add upstream Rev. 2926:
    - www/vicidial/admin.php: Fixed issue with CID Groups.
  * Add upstream Rev. 2927:
    - www/vicidial/admin.php: Added higher hopper level options.